SpringBootTest 를 이용한 회원가입, 로그인 Test코드 추가

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
