spring-boot-starter-aop 의존성 추가 , @EnableAspectJAutoProxy 추가 , @interface LoginCheck 추가 , @Component @Aspect @Before 를 이용한 loginCheck()함수 구현

--- a/pom.xml
+++ b/pom.xml
@@ -83,10 +83,18 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
+
+		<!-- Junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<!-- AOP -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
 	</dependencies>
