--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.3.1.RELEASE</version>
 			</plugin>
 		</plugins>
 		<resources>
