--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,8 @@ spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 
+# expire
+expire.default=36288000
+
 # tomcat
 server.port=9000
