--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
+spring.data.redis.repositories.enabled=false
 
 # expire
 expire.default=36288000
