--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # mysql
-spring.datasource.url=jdbc:mysql://localhost:3307/market?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/market?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=wnstjr1026
 
@@ -12,6 +12,10 @@ spring.cache.type=redis
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
+spring.data.redis.repositories.enabled=false
+
+# expire
+expire.default=36288000
 
 # tomcat
-server.port = 8888
+server.port=8888
