#29 대용량 트래픽 게시글 검색시 캐싱 적용 - 레디스 기본 만료시간 설정명 변경 - 레디스 주석 내용 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.redis.password=
 spring.data.redis.repositories.enabled=false
 
 # expire
-expire.default=36288000
+expire.defaultTime=36288000
 
 # tomcat
 server.port=8888
