--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,8 @@ spring.data.redis.repositories.enabled=false
 expire.defaultTime=36288000
 
 # tomcat
-server.port=8888
+server.port=9000
+
+#JSP, HTML ModelAndView Path Setting
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
