#29 게시글 검색시 @Cacheable을 사용하여 RedisCache 적용 - redis.config에 시스템 설정 명 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.messages.encoding=UTF-8
 
 # redis
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
-spring.data.redis.repositories.enabled=false
+spring.data.redis.repositories.enabled=true
+market.server.redis.host=localhost
+market.server.redis.port=6379
+market.server.redis.password=
 
 # expire
 expire.defaultTime=36288000
