--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,16 @@ spring.messages.encoding=UTF-8
 
 # redis
 spring.cache.type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=
-spring.data.redis.repositories.enabled=false
+spring.data.redis.repositories.enabled=true
+market.server.redis.host=localhost
+market.server.redis.port=6379
+market.server.redis.password=
 
 # expire
 expire.defaultTime=36288000
 
 # tomcat
-server.port=9000
+server.port=8888
 
 #JSP, HTML ModelAndView Path Setting
 spring.mvc.view.prefix=/WEB-INF/jsp/
