--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,6 +15,7 @@ market.server.redis.port=6379
 market.server.redis.password=
 
 # expire
+# millisecond 600분으로 약 10시간
 expire.defaultTime=36288000
 
 #JSP, HTML ModelAndView Path Setting
