#29 게시글 검색시 @Cacheable을 사용하여 RedisCache 적용 - redisTemplate json 형식 받을시 값이 깨지지 않게 직렬화하고 클래스 여러개 사용 가능한 bean 등록 - CategoryDTO builder 적용 - ProductSearchController 검색시 초기 캐싱된 게시글로 조회되게 변경 - 사용하지않는 UserDTO RedisHash 삭제 - ProductSearchMapper selectProducts 인자 ProductDTO -> productStatus 변경 - ProductSearchServiceImpl init함수에서 게시글 최대 2000개 redisTemplate에 push - addRedisKeys, findAllProductsByCacheId 게시글 추가시 캐시 추가하는 함수, 캐싱되어있는 게시글 반환 함수 추가 - RedisKeyFactory redisTemplate 에 key 저장시 종류에따라 key반환하는 클래스 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/market?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3307/market?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=wnstjr1026
 
@@ -16,6 +16,7 @@ market.server.redis.password=
 
 # expire
 expire.defaultTime=36288000
+expire.products=3600
 
 # tomcat
-server.port=8888
+server.port=9000
