캐싱 만료시간 추가 , DateUtil 필요없는 로그 삭제

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,6 +17,7 @@ market.server.redis.password=
 # expire
 # millisecond 600분으로 약 10시간
 expire.defaultTime=36288000
+expire.products=5
 
 #JSP, HTML ModelAndView Path Setting
 spring.mvc.view.prefix=/WEB-INF/jsp/
