profile update release

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=
 
 # profile name = local, dev, prod
-spring.profiles.active=dev
+spring.profiles.active=release
 
 # session
 spring.session.store-type=redis
