spring-boot-maven-plugin version delete

--- a/src/main/resources/application-release.properties
+++ b/src/main/resources/application-release.properties
@@ -16,4 +16,8 @@ market.server.redis.password=
 
 # expire
 expire.defaultTime=36288000
-expire.products=5
+expire.products=5000
+
+#JSP, HTML ModelAndView Path Setting
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
